# AlphaKinetics-v1

./: AlphaKinetics Codebase Dependency Map.txt  CONTRIBUTING.md  DOCUMENTATION.md  LICENSE  README.md  alphakinetics_config.json  pyproject.toml  server.py  tox.ini
demo_data/: synthetic_simple_chain_20250824_235704_exp_0 - Copy.csv  synthetic_simple_chain_20250824_235704_exp_0.csv
docs/: data-processing.html  design_studio.html  experimental-design.html  identifiability.html  index.html  network-discovery.html  network-simulation.html  parameter-estimation.html
docs/css/: documentation.css  style.css
docs/js/: design-fallback-fix.js  design-fix.js  design-override.js  design-payload-fix.js  utils.js
