[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphakinetics"
version = "0.1.0"
authors = [
    {name = "Isaac Uwana", email = "isaacak88@gmail.com"},
]
description = "A comprehensive toolkit for chemical reaction network analysis and experimental design"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "pyyaml>=5.4.0",
    "h5py>=3.1.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
    "pre-commit>=2.15",
    "click>=8.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=0.5",
    "myst-parser>=0.15",
]
notebooks = [
    "jupyter>=1.0",
    "ipywidgets>=7.6",
    "plotly>=5.0",
]
parallel = [
    "joblib>=1.0",
    "dask[complete]>=2021.3",
]

[project.scripts]
alphakinetics-demo = "alphakinetics.cli.demo:main"
alphakinetics-fit = "alphakinetics.cli.fit:main"
alphakinetics-search = "alphakinetics.cli.search:main"
alphakinetics-analyze = "alphakinetics.cli.analyze:main"
alphakinetics-design = "alphakinetics.cli.design:main"
alphakinetics-validate = "alphakinetics.cli.validate:main"

[project.urls]
Homepage = "https://github.com/isaacuwana/AlphaKinetics"
Documentation = "https://alphakinetics.readthedocs.io"
Repository = "https://github.com/isaacuwana/AlphaKinetics"
"Bug Tracker" = "https://github.com/isaacuwana/AlphaKinetics/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true